Fix height on mobile

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     font-family: 'Inter', sans-serif;
 }
 .wrapper{
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -106,6 +106,9 @@ p, h3:not(h3:last-of-type){
     color: hsl(228, 45%, 44%); 
 }
 @media (min-width: 900px){
+    .wrapper{
+        height: 100vh;
+    }
     .flex{
         display: flex;
         max-width: 1100px;
